Add password encryption at rest with AES-256-GCM
- Added encryption library with AES-256-GCM and PBKDF2 key derivation
- Updated config manager to encrypt/decrypt passwords automatically
- Added master password prompt dialog (skipped if no encrypted passwords)
- Created encrypt-passwords CLI tool for encrypting/decrypting existing configs
- Added DeepCopy methods for Config and Connection models
- Updated .gitignore to exclude sensitive config files (connections.yaml, etc.)
- Created connections.example.yaml as a template
- Added ENCRYPTION.md documentation
- Supports three password storage options: plain text, encrypted, or 1Password references
- 1Password references (op://) are never encrypted
- Master password is never stored, must be remembered by user

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,11 @@ Thumbs.db
 bin/
 dist/
 
-# Local config (optional - remove if you want to track user configs)
-# config.yaml
+# Local config files with passwords/connections (should not be committed)
+connections.yaml
+config.yaml
+MremoteGO-Config.xml
+
+# Encryption tools
+encrypt-passwords
+encrypt-passwords.exe
