--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,15 @@ jobs:
             goos: linux
             goarch: amd64
             name: mremotego-linux-amd64
+          - os: ubuntu-latest
+            goos: linux
+            goarch: arm64
+            name: mremotego-linux-arm64
           - os: windows-latest
             goos: windows
             goarch: amd64
             name: mremotego-windows-amd64.exe
-          - os: macos-latest
+          - os: macos-13
             goos: darwin
             goarch: amd64
             name: mremotego-darwin-amd64
@@ -38,28 +42,44 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.24'
+        go-version: '1.23'
 
     - name: Install Linux dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
         sudo apt-get install -y gcc libgl1-mesa-dev xorg-dev
+        if [ "${{ matrix.goarch }}" = "arm64" ]; then
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+        fi
 
     - name: Build (Windows)
       if: matrix.os == 'windows-latest'
       env:
-        GOOS: ${{ matrix.goos }}
-        GOARCH: ${{ matrix.goarch }}
         CGO_ENABLED: 1
       run: |
         go build -o ${{ matrix.name }} ./cmd/mremotego-gui
 
-    - name: Build (Linux/macOS)
-      if: matrix.os != 'windows-latest'
+    - name: Build (Linux AMD64)
+      if: matrix.os == 'ubuntu-latest' && matrix.goarch == 'amd64'
       env:
-        GOOS: ${{ matrix.goos }}
-        GOARCH: ${{ matrix.goarch }}
+        CGO_ENABLED: 1
+      run: |
+        go build -o ${{ matrix.name }} ./cmd/mremotego-gui
+
+    - name: Build (Linux ARM64)
+      if: matrix.os == 'ubuntu-latest' && matrix.goarch == 'arm64'
+      env:
+        CGO_ENABLED: 1
+        GOOS: linux
+        GOARCH: arm64
+        CC: aarch64-linux-gnu-gcc
+      run: |
+        go build -o ${{ matrix.name }} ./cmd/mremotego-gui
+
+    - name: Build (macOS)
+      if: startsWith(matrix.os, 'macos')
+      env:
         CGO_ENABLED: 1
       run: |
         go build -o ${{ matrix.name }} ./cmd/mremotego-gui
