Use native ARM64 runner for Linux ARM64 builds instead of cross-compilation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
             goos: linux
             goarch: amd64
             name: mremotego-linux-amd64
-          - os: ubuntu-latest
+          - os: ubuntu-24.04-arm
             goos: linux
             goarch: arm64
             name: mremotego-linux-arm64
@@ -45,28 +45,10 @@ jobs:
         go-version: '1.23'
 
     - name: Install Linux dependencies
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-latest' || matrix.os == 'ubuntu-24.04-arm'
       run: |
         sudo apt-get update
-        if [ "${{ matrix.goarch }}" = "arm64" ]; then
-          # Add ARM64 architecture
-          sudo dpkg --add-architecture arm64
-          sudo apt-get update
-          # Install ARM64 cross-compilation tools
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-          # Install ARM64 libraries
-          sudo apt-get install -y \
-            libgl1-mesa-dev:arm64 \
-            libx11-dev:arm64 \
-            libxrandr-dev:arm64 \
-            libxxf86vm-dev:arm64 \
-            libxi-dev:arm64 \
-            libxcursor-dev:arm64 \
-            libxinerama-dev:arm64
-        else
-          # Install AMD64 libraries
-          sudo apt-get install -y gcc libgl1-mesa-dev xorg-dev
-        fi
+        sudo apt-get install -y gcc libgl1-mesa-dev xorg-dev
 
     - name: Build (Windows)
       if: matrix.os == 'windows-latest'
@@ -75,22 +57,10 @@ jobs:
       run: |
         go build -o ${{ matrix.name }} ./cmd/mremotego-gui
 
-    - name: Build (Linux AMD64)
-      if: matrix.os == 'ubuntu-latest' && matrix.goarch == 'amd64'
+    - name: Build (Linux)
+      if: matrix.os == 'ubuntu-latest' || matrix.os == 'ubuntu-24.04-arm'
       env:
         CGO_ENABLED: 1
-      run: |
-        go build -o ${{ matrix.name }} ./cmd/mremotego-gui
-
-    - name: Build (Linux ARM64)
-      if: matrix.os == 'ubuntu-latest' && matrix.goarch == 'arm64'
-      env:
-        CGO_ENABLED: 1
-        GOOS: linux
-        GOARCH: arm64
-        CC: aarch64-linux-gnu-gcc
-        CXX: aarch64-linux-gnu-g++
-        PKG_CONFIG_PATH: /usr/lib/aarch64-linux-gnu/pkgconfig
       run: |
         go build -o ${{ matrix.name }} ./cmd/mremotego-gui
 
