Change workflow to only trigger on version tags and manual dispatch, not every commit

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,11 @@ name: Build Cross-Platform
 
 on:
   push:
-    branches: [ main ]
+    tags:
+      - 'v*.*.*'  # Only trigger on version tags like v1.0.0
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
+  workflow_dispatch:  # Allow manual trigger
 
 jobs:
   build:
