Improve folder support and remove slow macOS Intel builds
- Folders now sort to top of connection list
- Add folder selection dropdown when creating connections
- Comment out macos-12 (Intel) from CI - very slow runner provisioning
- Keep macos-14 (ARM64) for Apple Silicon support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,12 @@ jobs:
             goos: darwin
             goarch: arm64
             name: mremotego-darwin-arm64
-          - os: macos-12
-            goos: darwin
-            goarch: amd64
-            name: mremotego-darwin-amd64
+          # Commented out - macOS Intel runners are very slow on free tier
+          # Uncomment if needed, but most Mac users are on Apple Silicon now
+          # - os: macos-12
+          #   goos: darwin
+          #   goarch: amd64
+          #   name: mremotego-darwin-amd64
 
     steps:
     - name: Checkout code
