--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -1,6 +1,6 @@
 [Details]
-Icon = "icon.svg"
+# Icon = "icon.svg"  # Temporarily disabled due to loading issues
 Name = "MremoteGO"
 ID = "com.mremotego.app"
-Version = "1.0.0"
-Build = 1
+Version = "1.0.1"
+Build = 2
