--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,12 +80,17 @@ jobs:
         name: ${{ matrix.goos }}-${{ matrix.goarch }}
         path: ${{ matrix.name }}
 
-  create-release-assets:
-    name: Create Release Assets
+  create-release:
+    name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Download all artifacts
       uses: actions/download-artifact@v4
       with:
@@ -94,16 +99,38 @@ jobs:
     - name: Display structure of downloaded files
       run: ls -R artifacts/
 
-    - name: Archive binaries
+    - name: Create release archives
       run: |
         cd artifacts
-        for dir in */; do
-          tar czf "${dir%/}.tar.gz" -C "$dir" .
+        # Create tar.gz for Linux and macOS
+        for dir in linux-* darwin-*; do
+          if [ -d "$dir" ]; then
+            tar czf "${dir}.tar.gz" -C "$dir" .
+          fi
         done
-        cd ..
+        # Create zip for Windows
+        for dir in windows-*; do
+          if [ -d "$dir" ]; then
+            cd "$dir"
+            zip -r "../${dir}.zip" .
+            cd ..
+          fi
+        done
+        ls -lh
 
-    - name: Upload combined artifacts
-      uses: actions/upload-artifact@v4
+    - name: Extract version from tag
+      id: version
+      run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
       with:
-        name: all-binaries
-        path: artifacts/*.tar.gz
+        name: Release ${{ steps.version.outputs.VERSION }}
+        draft: false
+        prerelease: false
+        generate_release_notes: true
+        files: |
+          artifacts/*.tar.gz
+          artifacts/*.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
