--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,7 +127,7 @@ jobs:
       with:
         name: Release ${{ steps.version.outputs.VERSION }}
         draft: false
-        prerelease: false
+        prerelease: true
         generate_release_notes: true
         files: |
           artifacts/*.tar.gz
