Built-in Instructions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
       env:
         CGO_ENABLED: 1
       run: |
-        go build -o ${{ matrix.name }} ./cmd/mremotego-gui
+        go build -ldflags "-H windowsgui" -o ${{ matrix.name }} ./cmd/mremotego-gui
 
     - name: Build (Linux)
       if: matrix.os == 'ubuntu-latest' || matrix.os == 'ubuntu-24.04-arm'
