Add 1Password SDK integration with vault name mapping
- Implemented 1Password SDK v0.4.0-beta.1 for desktop app integration
- Added biometric authentication support via SDK
- Created config-based 1Password account selection in Settings UI
- Added vault name mapping feature to handle encrypted vault names
- Fixed DeepCopy() to properly save Settings section
- SDK provider now used for creating 1Password items (not CLI)
- Added VaultInfo struct to store vault ID and friendly names
- Settings dialog now includes 'Configure Vault Names' button
- Vault mappings stored in config under settings.vault_names
- Manager loads and applies vault name mappings on startup

Breaking changes:
- Settings structure expanded with vault_names map field
- Configs with settings: null will auto-initialize to empty Settings

Fixes:
- SDK provider properly set in Manager for CreateOnePasswordItem
- DeepCopy now preserves Settings and VaultNames during save
- Vault dropdown shows friendly names instead of encrypted placeholders

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,4 +1,13 @@
 version: "1.0"
+
+# Global Settings
+settings:
+  # 1Password Desktop App Integration
+  # Set this to your account name as shown at the TOP of the 1Password desktop app sidebar
+  # Examples: "My 1Password", "Work Account", "company.1password.com"
+  # Leave empty or comment out to disable 1Password integration
+  onepassword_account: ""
+
 connections:
   - name: "Production"
     type: folder
